// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate should be able to wrap invalid nodes - 2 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "originalNode": Object {
                  "type": "code",
                },
              },
              "type": "unknown",
            },
            Object {
              "type": "underline",
            },
          ],
          "text": "Foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should be able to wrap invalid nodes - 2 2`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
            Object {
              "type": "underline",
            },
          ],
          "text": "Foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should be able to wrap invalid nodes 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "originalNode": Object {
              "text": " world!",
              "type": "tet",
            },
          },
          "type": "unknown",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "World!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should be able to wrap invalid nodes 2`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
        Object {
          "text": " world!",
          "type": "tet",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "World!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should not remove valid marks 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should not remove valid marks 2`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validator should take custom list of nodes 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "originalNode": Object {
          "content": Array [],
          "type": "paragraph",
        },
      },
      "type": "unknown",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
